--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "68e65a0b",
+   "id": "26e4877a",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f49f8d19",
+   "execution_count": 57,
+   "id": "072beacb",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "'ma_variable=2'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "d8dab729",
+   "execution_count": 58,
+   "id": "3f358e03",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "'bool(\"une chaine\")=True, bool(\"\")=False, bool(3)=True, bool(0)=False, bool(-33)=True, bool([])=False, bool([1])=True, bool(None)=False'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "c0eb67a1",
+   "execution_count": 59,
+   "id": "63419365",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "'fizz'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "2415b4c2",
+   "execution_count": 60,
+   "id": "9e023df3",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "(1, 0)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "7e8fcbbf",
+   "execution_count": 61,
+   "id": "deb0a4a0",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,8 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "4c21b5d3",
+   "execution_count": 62,
+   "id": "dab714b0",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,8 +181,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "d07fe79f",
+   "execution_count": 63,
+   "id": "7e0aa1d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,17 +192,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d72a49ef",
+   "cell_type": "markdown",
+   "id": "5459f33e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Mardi "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a49e844e",
+   "id": "e93c3654",
    "metadata": {},
    "outputs": [],
    "source": []
