--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26e4877a",
+   "id": "9104474b",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "072beacb",
+   "id": "a99dbb51",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3f358e03",
+   "id": "0dc5da03",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "63419365",
+   "id": "8a75b4bd",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "9e023df3",
+   "id": "24ad1323",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "deb0a4a0",
+   "id": "bedea4b4",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "dab714b0",
+   "id": "dee842fd",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7e0aa1d0",
+   "id": "bedb2ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,16 +193,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5459f33e",
+   "id": "78501ad8",
    "metadata": {},
    "source": [
-    "# Mardi "
+    "# Mardi \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e93c3654",
+   "id": "c4eea497",
    "metadata": {},
    "outputs": [],
    "source": []
