--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9104474b",
+   "id": "be7683ee",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a99dbb51",
+   "id": "b77b9d07",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0dc5da03",
+   "id": "f0dacbc7",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8a75b4bd",
+   "id": "5d5660c2",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "24ad1323",
+   "id": "e425c122",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "bedea4b4",
+   "id": "eb37066a",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "dee842fd",
+   "id": "acef40d8",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "bedb2ab1",
+   "id": "6298d97c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,17 +193,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78501ad8",
+   "id": "8c1eb7b9",
    "metadata": {},
    "source": [
     "# Mardi \n",
-    "\n"
+    "\n",
+    "## Matin \n",
+    "\n",
+    "* exercice fizzbuzz + corrections \n",
+    "    * plusieurs manières de faire le \n",
+    "\n",
+    "## Après-midi"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4eea497",
+   "id": "33ac16b3",
    "metadata": {},
    "outputs": [],
    "source": []
