--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be7683ee",
+   "id": "11dce2be",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b77b9d07",
+   "id": "a6e4fcfa",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f0dacbc7",
+   "id": "f2f27a1d",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5d5660c2",
+   "id": "7f54c2ad",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e425c122",
+   "id": "e5b3aabd",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "eb37066a",
+   "id": "925e1554",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "acef40d8",
+   "id": "75769efe",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "6298d97c",
+   "id": "8829eb0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c1eb7b9",
+   "id": "95ac75eb",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -201,7 +201,8 @@
     "## Matin \n",
     "\n",
     "* exercice fizzbuzz + corrections \n",
-    "    * plusieurs manières de faire le \n",
+    "    * plusieurs manières de résoudre le problème, certaines plus \"explicites\" que d'autres\n",
+    "    * \n",
     "\n",
     "## Après-midi"
    ]
@@ -209,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33ac16b3",
+   "id": "e9fe5523",
    "metadata": {},
    "outputs": [],
    "source": []
