--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "11dce2be",
+   "id": "88a40d97",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a6e4fcfa",
+   "id": "b1ebdbc9",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f2f27a1d",
+   "id": "b82b9982",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "7f54c2ad",
+   "id": "486aa30f",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e5b3aabd",
+   "id": "8ceca37c",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "925e1554",
+   "id": "18ff13cf",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "75769efe",
+   "id": "d5ef110b",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8829eb0f",
+   "id": "caace8d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ac75eb",
+   "id": "8ee8ff18",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -201,8 +201,10 @@
     "## Matin \n",
     "\n",
     "* exercice fizzbuzz + corrections \n",
-    "    * plusieurs manières de résoudre le problème, certaines plus \"explicites\" que d'autres\n",
-    "    * \n",
+    "    * plusieurs manières de résoudre le problème, certaines plus \"explicites\" que d'autres   \n",
+    "* manipulations de booléens et valeurs par défaut à l'aide de `or` \n",
+    "* manipulations de fichiers \n",
+    "    * ouvrir en lecture (par défaut) : `f = open(NOM_DU_FICHIER, \"r\")`, on le parcours \n",
     "\n",
     "## Après-midi"
    ]
@@ -210,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9fe5523",
+   "id": "83409f03",
    "metadata": {},
    "outputs": [],
    "source": []
