--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "88a40d97",
+   "id": "e66a98d2",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b1ebdbc9",
+   "id": "8899058d",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b82b9982",
+   "id": "c3137eb1",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "486aa30f",
+   "id": "2cec0362",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8ceca37c",
+   "id": "e722d43c",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "18ff13cf",
+   "id": "f270ec82",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d5ef110b",
+   "id": "74de669f",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "caace8d9",
+   "id": "3cfb27a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ee8ff18",
+   "id": "8ce2c431",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -204,7 +204,8 @@
     "    * plusieurs manières de résoudre le problème, certaines plus \"explicites\" que d'autres   \n",
     "* manipulations de booléens et valeurs par défaut à l'aide de `or` \n",
     "* manipulations de fichiers \n",
-    "    * ouvrir en lecture (par défaut) : `f = open(NOM_DU_FICHIER, \"r\")`, on le parcours \n",
+    "    * ouvrir en lecture (par défaut) : `f = open(NOM_DU_FICHIER, \"r\")`, on le parcours `f.readlines()`, on le ferme `f.close()`\n",
+    "    * \n",
     "\n",
     "## Après-midi"
    ]
@@ -212,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83409f03",
+   "id": "28a1b1bd",
    "metadata": {},
    "outputs": [],
    "source": []
