--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c5101809",
+   "execution_count": 3,
+   "id": "12096d5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(\"toto.txt\", \"w\")"
+    "f = open(\"toto.txt\", \"w\")\n",
+    "f.writelines?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1af14c12",
+   "id": "e9753ce3",
    "metadata": {},
    "outputs": [],
    "source": []
