--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "12096d5e",
+   "execution_count": 5,
+   "id": "ecb9b89f",
    "metadata": {},
    "outputs": [],
    "source": [
     "f = open(\"toto.txt\", \"w\")\n",
-    "f.writelines?"
+    "\n",
+    "prenom = \"Matthieu\"\n",
+    "f.write(f\"Bonjour, je suis {prenom}\\nEt je fais du python !\\n\")\n",
+    "f.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9753ce3",
+   "id": "62f6fe69",
    "metadata": {},
    "outputs": [],
    "source": []
