--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ecb9b89f",
+   "execution_count": 9,
+   "id": "03cccfbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(\"toto.txt\", \"w\")\n",
+    "f = open(\"toto2.txt\", \"a\")\n",
     "\n",
     "prenom = \"Matthieu\"\n",
     "f.write(f\"Bonjour, je suis {prenom}\\nEt je fais du python !\\n\")\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62f6fe69",
+   "id": "ed36a008",
    "metadata": {},
    "outputs": [],
    "source": []
