--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "03cccfbc",
+   "id": "cdbfe9bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,10 +17,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed36a008",
+   "id": "a74bfe42",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"toto2.txt\") as f:\n",
+    "    print(f.readlines())\n",
+    "\n",
+    "print(f.open)"
+   ]
   }
  ],
  "metadata": {
