--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cdbfe9bd",
+   "id": "29e964dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +16,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a74bfe42",
+   "execution_count": 13,
+   "id": "7248dadc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n']\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"toto2.txt\") as f:\n",
     "    print(f.readlines())\n",
+    "    print(f.closed)\n",
     "\n",
-    "print(f.open)"
+    "print(f.closed)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b14b94e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
