--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -2,22 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "29e964dc",
+   "execution_count": 16,
+   "id": "44e97b1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [16], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m prenom \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMatthieu\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m f\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBonjour, je suis \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprenom\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mEt je fais du python !\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      6\u001b[0m f\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
    "source": [
-    "f = open(\"toto2.txt\", \"a\")\n",
+    "f = open(\"toto2.txt\", \"w\")\n",
     "\n",
     "prenom = \"Matthieu\"\n",
     "f.write(f\"Bonjour, je suis {prenom}\\nEt je fais du python !\\n\")\n",
+    "1/0\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7248dadc",
+   "id": "5e3cc769",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14b94e7",
+   "id": "5b6502ad",
    "metadata": {},
    "outputs": [],
    "source": []
