--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -2,35 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "44e97b1c",
+   "execution_count": 18,
+   "id": "7ba07c58",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [16], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m prenom \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMatthieu\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m f\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBonjour, je suis \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprenom\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mEt je fais du python !\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      6\u001b[0m f\u001b[38;5;241m.\u001b[39mclose()\n",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = open(\"toto2.txt\", \"w\")\n",
     "\n",
     "prenom = \"Matthieu\"\n",
     "f.write(f\"Bonjour, je suis {prenom}\\nEt je fais du python !\\n\")\n",
-    "1/0\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5e3cc769",
+   "execution_count": 19,
+   "id": "2cb27e41",
    "metadata": {},
    "outputs": [
     {
@@ -53,11 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b6502ad",
+   "execution_count": 20,
+   "id": "546aaaae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"toto2.txt\", \"w\") as f:\n",
+    "    prenom = \"Matthieu\"\n",
+    "    f.write(f\"Bonjour, je suis {prenom}\\nEt je fais du python !\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1495b0dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    totot"
+   ]
   }
  ],
  "metadata": {
