--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7ba07c58",
+   "id": "cf547d3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2cb27e41",
+   "id": "64a31231",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "546aaaae",
+   "id": "fdb1f8ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "9b73e1bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# les variables \n",
+    "\n",
+    "\n",
+    "for i in range(10):\n",
+    "    tototo = i \n",
+    "\n",
+    "print(tototo)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1495b0dc",
+   "id": "abbe6823",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range(10):\n",
-    "    totot"
-   ]
+   "source": []
   }
  ],
  "metadata": {
