--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cf547d3d",
+   "id": "181de5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "64a31231",
+   "id": "eb5a6839",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fdb1f8ad",
+   "id": "7162ac63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9b73e1bf",
+   "id": "c2787b25",
    "metadata": {},
    "outputs": [
     {
@@ -65,9 +65,8 @@
     }
    ],
    "source": [
-    "# les variables \n",
-    "\n",
-    "\n",
+    "# les variables \"fuitent\" (leak) des blocs, \n",
+    "# le seul bloc qui ne fuite pas, c'est les fonctions\n",
     "for i in range(10):\n",
     "    tototo = i \n",
     "\n",
@@ -77,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abbe6823",
+   "id": "908a5560",
    "metadata": {},
    "outputs": [],
    "source": []
