--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e66a98d2",
+   "id": "dd8efec8",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8899058d",
+   "id": "80c9d57c",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c3137eb1",
+   "id": "b00f07ef",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2cec0362",
+   "id": "f815418f",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e722d43c",
+   "id": "bcb3d284",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f270ec82",
+   "id": "87807de4",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "74de669f",
+   "id": "3147d6d6",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3cfb27a8",
+   "id": "c06717a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ce2c431",
+   "id": "110c58a6",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -205,7 +205,9 @@
     "* manipulations de booléens et valeurs par défaut à l'aide de `or` \n",
     "* manipulations de fichiers \n",
     "    * ouvrir en lecture (par défaut) : `f = open(NOM_DU_FICHIER, \"r\")`, on le parcours `f.readlines()`, on le ferme `f.close()`\n",
-    "    * \n",
+    "    * ouvrir en écriure : `f = open(NOM_DU_FICHIER, \"w\")`, on écrit du contenu `f.write(\"toto\")`, on le ferme `f.close()`\n",
+    "    * on peut l'ouvrir \n",
+    "* création de fonctions\n",
     "\n",
     "## Après-midi"
    ]
@@ -213,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28a1b1bd",
+   "id": "579b2c5c",
    "metadata": {},
    "outputs": [],
    "source": []
