--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "181de5e4",
+   "id": "5e24c0c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "eb5a6839",
+   "id": "3f837b7a",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7162ac63",
+   "id": "76f2dba8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c2787b25",
+   "id": "487d4552",
    "metadata": {},
    "outputs": [
     {
@@ -75,8 +75,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "96e4f4ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "908a5560",
+   "id": "02f6e0b8",
    "metadata": {},
    "outputs": [],
    "source": []
