--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dd8efec8",
+   "id": "c42f86d2",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "80c9d57c",
+   "id": "7ff274d4",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b00f07ef",
+   "id": "b6b9e5ef",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f815418f",
+   "id": "4d716830",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "bcb3d284",
+   "id": "0523b9ec",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "87807de4",
+   "id": "f335424c",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "3147d6d6",
+   "id": "b0e0dd46",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "c06717a7",
+   "id": "a3922ab8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110c58a6",
+   "id": "5d21f73e",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -206,7 +206,8 @@
     "* manipulations de fichiers \n",
     "    * ouvrir en lecture (par défaut) : `f = open(NOM_DU_FICHIER, \"r\")`, on le parcours `f.readlines()`, on le ferme `f.close()`\n",
     "    * ouvrir en écriure : `f = open(NOM_DU_FICHIER, \"w\")`, on écrit du contenu `f.write(\"toto\")`, on le ferme `f.close()`\n",
-    "    * on peut l'ouvrir \n",
+    "    * on peut l'ouvrir de différentes façons (read, write, append, binaire) => aller lire l'aide de open pour en savoir plus \n",
+    "    * on peut utiliser des `context manager` pour faciliter la gestiond es fichiers (il est fermé automatiquement \n",
     "* création de fonctions\n",
     "\n",
     "## Après-midi"
@@ -215,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "579b2c5c",
+   "id": "aca3c11f",
    "metadata": {},
    "outputs": [],
    "source": []
