--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c42f86d2",
+   "id": "407fc9b5",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7ff274d4",
+   "id": "cf37a473",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b6b9e5ef",
+   "id": "e1ce87c9",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "4d716830",
+   "id": "550b49de",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0523b9ec",
+   "id": "0cc51f1e",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f335424c",
+   "id": "9fe371b7",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b0e0dd46",
+   "id": "9c0993bb",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a3922ab8",
+   "id": "3f594a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d21f73e",
+   "id": "4680b384",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -207,7 +207,7 @@
     "    * ouvrir en lecture (par défaut) : `f = open(NOM_DU_FICHIER, \"r\")`, on le parcours `f.readlines()`, on le ferme `f.close()`\n",
     "    * ouvrir en écriure : `f = open(NOM_DU_FICHIER, \"w\")`, on écrit du contenu `f.write(\"toto\")`, on le ferme `f.close()`\n",
     "    * on peut l'ouvrir de différentes façons (read, write, append, binaire) => aller lire l'aide de open pour en savoir plus \n",
-    "    * on peut utiliser des `context manager` pour faciliter la gestiond es fichiers (il est fermé automatiquement \n",
+    "    * on peut utiliser des `context manager` pour faciliter la gestion des fichiers (il est fermé automatiquement quand on sort)\n",
     "* création de fonctions\n",
     "\n",
     "## Après-midi"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca3c11f",
+   "id": "287ec49c",
    "metadata": {},
    "outputs": [],
    "source": []
