--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "da3f6dcf",
+   "id": "283af703",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "67ed7313",
+   "id": "84736be3",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "287f6ef7",
+   "id": "1e84eed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "82ca57e0",
+   "id": "c55a6420",
    "metadata": {},
    "outputs": [
     {
@@ -75,16 +75,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "448bb230",
+   "execution_count": 23,
+   "id": "f3a5d405",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n']\n",
+      "['Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n', 'Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n', 'Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n', 'Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n']\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"toto2.txt\") as f1, open(\"toto.txt\") as f2:\n",
+    "    print(f1.readlines())\n",
+    "    print(f2.readlines())\n",
+    "\n",
+    "print(f.closed)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5b54bb9",
+   "id": "8d7a9780",
    "metadata": {},
    "outputs": [],
    "source": []
