--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "283af703",
+   "id": "54b67731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "84736be3",
+   "id": "df408411",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1e84eed4",
+   "id": "ca910a2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c55a6420",
+   "id": "45016a05",
    "metadata": {},
    "outputs": [
     {
@@ -75,8 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "f3a5d405",
+   "execution_count": 24,
+   "id": "e3cab267",
    "metadata": {},
    "outputs": [
     {
@@ -84,26 +84,30 @@
      "output_type": "stream",
      "text": [
       "['Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n']\n",
-      "['Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n', 'Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n', 'Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n', 'Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n']\n",
-      "True\n"
+      "['Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n', 'Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n', 'Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n', 'Bonjour, je suis Matthieu\\n', 'Et je fais du python !\\n']\n"
      ]
     }
    ],
    "source": [
     "with open(\"toto2.txt\") as f1, open(\"toto.txt\") as f2:\n",
     "    print(f1.readlines())\n",
-    "    print(f2.readlines())\n",
-    "\n",
-    "print(f.closed)"
+    "    print(f2.readlines())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d7a9780",
+   "id": "a82352d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"toto2.txt\") as f1:\n",
+    "    print(...)\n",
+    "    with open(\"toto.txt\") as f2:\n",
+    "        print(f1.readlines())\n",
+    "        print(f2.readlines())\n",
+    "    print(...)"
+   ]
   }
  ],
  "metadata": {
