--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "407fc9b5",
+   "id": "6be96327",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "cf37a473",
+   "id": "be4c4257",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e1ce87c9",
+   "id": "991453a7",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "550b49de",
+   "id": "333eaaa4",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0cc51f1e",
+   "id": "2eca7350",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9fe371b7",
+   "id": "89885308",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9c0993bb",
+   "id": "9a3396a2",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3f594a68",
+   "id": "13c440c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4680b384",
+   "id": "420e7c0a",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -209,6 +209,8 @@
     "    * on peut l'ouvrir de différentes façons (read, write, append, binaire) => aller lire l'aide de open pour en savoir plus \n",
     "    * on peut utiliser des `context manager` pour faciliter la gestion des fichiers (il est fermé automatiquement quand on sort)\n",
     "* création de fonctions\n",
+    "    * mot clé `def`, suivu du nom de la fonction, suivi de la liste des paramètres entre parenthèses\n",
+    "    * on peut mettre des valeurs par défaut en mettant `(param= MA_VALEUR)`\n",
     "\n",
     "## Après-midi"
    ]
@@ -216,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "287ec49c",
+   "id": "7b3dc4ee",
    "metadata": {},
    "outputs": [],
    "source": []
