--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c8cf5eb0",
+   "id": "469f2694",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "92010b33",
+   "id": "f98322f8",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c034f127",
+   "id": "89223a43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "30fd6baf",
+   "id": "2371e040",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cd5941b3",
+   "id": "65a47938",
    "metadata": {},
    "outputs": [
     {
@@ -96,16 +96,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "58629b20",
+   "execution_count": 26,
+   "id": "1f595c70",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def inutile(p=[]):\n",
+    "    p.append(\"toto\")\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fa89d44a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['toto']\n"
+     ]
+    }
+   ],
+   "source": [
+    "inutile()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25db9528",
+   "id": "1a284bb3",
    "metadata": {},
    "outputs": [],
    "source": []
