--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "469f2694",
+   "id": "005387a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f98322f8",
+   "id": "03d74ebc",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "89223a43",
+   "id": "5e00489f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2371e040",
+   "id": "2f4946aa",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "65a47938",
+   "id": "2241bd50",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1f595c70",
+   "id": "f246e943",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fa89d44a",
+   "id": "dff405aa",
    "metadata": {},
    "outputs": [
     {
@@ -126,8 +126,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "adb363e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['toto', 'toto']\n"
+     ]
+    }
+   ],
+   "source": [
+    "inutile()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1a284bb3",
+   "id": "d4c9d471",
    "metadata": {},
    "outputs": [],
    "source": []
