--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "005387a3",
+   "id": "67a1015a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "03d74ebc",
+   "id": "a84a6945",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5e00489f",
+   "id": "635d9cfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2f4946aa",
+   "id": "ffd32c55",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2241bd50",
+   "id": "5d75d2e2",
    "metadata": {},
    "outputs": [
     {
@@ -97,11 +97,16 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f246e943",
+   "id": "eb1ca65e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def inutile(p=[]):\n",
+    "    p.append(\"toto\")\n",
+    "    print(p)\n",
+    "\n",
+    "def inutile_vide_a_chaque_fois(p=None):\n",
+    "    p = p or []\n",
     "    p.append(\"toto\")\n",
     "    print(p)"
    ]
@@ -109,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "dff405aa",
+   "id": "0b7b5f3b",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "adb363e5",
+   "id": "36b64dcb",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4c9d471",
+   "id": "41af9cda",
    "metadata": {},
    "outputs": [],
    "source": []
