--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "67a1015a",
+   "id": "02dab511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a84a6945",
+   "id": "7cfb606a",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "635d9cfc",
+   "id": "7d09ffad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ffd32c55",
+   "id": "51f4a363",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5d75d2e2",
+   "id": "73f76b56",
    "metadata": {},
    "outputs": [
     {
@@ -96,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "eb1ca65e",
+   "execution_count": 29,
+   "id": "74f9635e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,15 +106,17 @@
     "    print(p)\n",
     "\n",
     "def inutile_vide_a_chaque_fois(p=None):\n",
-    "    p = p or []\n",
+    "    if p is None:\n",
+    "        p = []\n",
+    "    # p = p or []\n",
     "    p.append(\"toto\")\n",
     "    print(p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "0b7b5f3b",
+   "execution_count": 30,
+   "id": "4e26482d",
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "36b64dcb",
+   "execution_count": 31,
+   "id": "7335bea3",
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +151,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "163649cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['toto']\n"
+     ]
+    }
+   ],
+   "source": [
+    "inutile_vide_a_chaque_fois()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a912e550",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['toto']\n"
+     ]
+    }
+   ],
+   "source": [
+    "inutile_vide_a_chaque_fois()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "41af9cda",
+   "id": "ac6b5592",
    "metadata": {},
    "outputs": [],
    "source": []
