--- a/tape_en_cours/Ancrage mémoriel.ipynb
+++ b/tape_en_cours/Ancrage mémoriel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6be96327",
+   "id": "99898b2d",
    "metadata": {},
    "source": [
     "# Jour 1\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "be4c4257",
+   "id": "739b26f0",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "991453a7",
+   "id": "8eca9b0b",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "333eaaa4",
+   "id": "d14e3296",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2eca7350",
+   "id": "246b77b9",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "89885308",
+   "id": "137f1ec2",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9a3396a2",
+   "id": "c7b5f2f9",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "13c440c0",
+   "id": "28d387c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "420e7c0a",
+   "id": "fcabcad9",
    "metadata": {},
    "source": [
     "# Mardi \n",
@@ -211,6 +211,7 @@
     "* création de fonctions\n",
     "    * mot clé `def`, suivu du nom de la fonction, suivi de la liste des paramètres entre parenthèses\n",
     "    * on peut mettre des valeurs par défaut en mettant `(param= MA_VALEUR)`\n",
+    "    * il faut faire attention aux valeurs par défaut qui peuvent être mutées et plutôt utiliser des types immutables (nombres, chaine de caractères, tuples, None)\n",
     "\n",
     "## Après-midi"
    ]
@@ -218,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b3dc4ee",
+   "id": "1184091c",
    "metadata": {},
    "outputs": [],
    "source": []
