--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "02dab511",
+   "id": "734efca2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7cfb606a",
+   "id": "e231d105",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7d09ffad",
+   "id": "45ef7787",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "51f4a363",
+   "id": "b92d7b8c",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "73f76b56",
+   "id": "2f4d3e2d",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "74f9635e",
+   "id": "8fd4b611",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4e26482d",
+   "id": "86831167",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7335bea3",
+   "id": "67c2b087",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "163649cd",
+   "id": "59407f72",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a912e550",
+   "id": "79767a37",
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +187,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "a6f9f2bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ma_fonction(nombre):\n",
+    "    return nombre * 2 \n",
+    "\n",
+    "print(ma_fonction(3))\n",
+    "\n",
+    "####################\n",
+    "\n",
+    "ma_fonction_lambda = lambda nombre: nombre * 2\n",
+    "print(ma_fonction_lambda(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ac6b5592",
+   "id": "0ce29a7a",
    "metadata": {},
    "outputs": [],
    "source": []
