--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fdd9e535",
+   "id": "43ab79f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b725a703",
+   "id": "b19764dd",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "917239eb",
+   "id": "89c661f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "380a6506",
+   "id": "206659d5",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "9bb0975e",
+   "id": "43cd7247",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a7db453a",
+   "id": "f0ba3448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "16872bae",
+   "id": "bfb480de",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3b614f55",
+   "id": "2e32c016",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "422595a3",
+   "id": "8b495d7b",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e38047c0",
+   "id": "65e17793",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e59784dd",
+   "id": "836d1f18",
    "metadata": {},
    "outputs": [
     {
@@ -214,17 +214,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "ef2eddc0",
+   "execution_count": 39,
+   "id": "cd2ee296",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<map at 0x7f128efb4cd0>"
+       "[('Project', 1),\n",
+       " ('Gutenberg’s', 1),\n",
+       " ('Alice’s', 1),\n",
+       " ('Adventures', 1),\n",
+       " ('in', 1),\n",
+       " ('Wonderland', 1),\n",
+       " ('Project', 1),\n",
+       " ('Gutenberg’s', 1),\n",
+       " ('Adventures', 1),\n",
+       " ('in', 1),\n",
+       " ('Wonderland', 1),\n",
+       " ('Project', 1),\n",
+       " ('Gutenberg’s', 1)]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,13 +245,36 @@
     "data = [\"Project\",\"Gutenberg’s\",\"Alice’s\",\"Adventures\",\n",
     "\"in\",\"Wonderland\",\"Project\",\"Gutenberg’s\",\"Adventures\",\n",
     "\"in\",\"Wonderland\",\"Project\",\"Gutenberg’s\"]\n",
-    "list(map(lambda x: (x,1), data)"
+    "list(map(lambda x: (x,1), data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f8f39b4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Project', 1), ('Gutenberg’s', 1), ('Alice’s', 1), ('Adventures', 1), ('in', 1), ('Wonderland', 1), ('Project', 1), ('Gutenberg’s', 1), ('Adventures', 1), ('in', 1), ('Wonderland', 1), ('Project', 1), ('Gutenberg’s', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = []\n",
+    "for e in data:\n",
+    "    fonction_a_appliquer = lambda x: (x,1)\n",
+    "    res.append(fonction_a_appliquer(e))\n",
+    "\n",
+    "print(res)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2493d922",
+   "id": "c43339f2",
    "metadata": {},
    "outputs": [],
    "source": []
