--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "43ab79f9",
+   "id": "e9c05fd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b19764dd",
+   "id": "1b695de5",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "89c661f3",
+   "id": "0ec1f075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "206659d5",
+   "id": "2981108b",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "43cd7247",
+   "id": "b65d957a",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f0ba3448",
+   "id": "f7c92f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "bfb480de",
+   "id": "1c67b2a3",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2e32c016",
+   "id": "755847ed",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8b495d7b",
+   "id": "db50a23b",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "65e17793",
+   "id": "bbdeeaba",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "836d1f18",
+   "id": "b99401d4",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "cd2ee296",
+   "id": "fbfb284d",
    "metadata": {},
    "outputs": [
     {
@@ -250,8 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "f8f39b4b",
+   "execution_count": 44,
+   "id": "54cced74",
    "metadata": {},
    "outputs": [
     {
@@ -263,9 +263,11 @@
     }
    ],
    "source": [
+    "def fonction_a_appliquer(x):\n",
+    "    return (x,1)\n",
+    "\n",
     "res = []\n",
     "for e in data:\n",
-    "    fonction_a_appliquer = lambda x: (x,1)\n",
     "    res.append(fonction_a_appliquer(e))\n",
     "\n",
     "print(res)"
@@ -274,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c43339f2",
+   "id": "94d6d039",
    "metadata": {},
    "outputs": [],
    "source": []
